# lofybox

./: .cache  .env  README.md  pyproject.toml
src/: clockify_logger.py  main.py  projetos_ativos.py  spotify_controller.py  timer.py
