
[tool.poetry]
name = "lofybox"
version = "0.1.0"
description = "Minimal timer GUI"
authors = ["Seu Nome <email@email.com>"]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
pyside6 = "^6.9.1"
spotipy = "^2.25.1"
dotenv = "^0.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
